# py-push-filter

./: LICENSE  LICENSE.txt  pyproject.toml
pushy/: app.py
